// Generated by sylk.build, DO NOT EDIT.
syntax = "proto3";
package sylklabs.hello.world.v1;

service HelloWorldService {
	// [hello.world.v1.HelloWorldService.Hello] - 
	rpc Hello (sylklabs.hello.world.v1.Hello) returns (sylklabs.hello.world.v1.Hello);
	// [StreamHello] - 
	rpc StreamHello (sylklabs.hello.world.v1.Hello) returns (stream sylklabs.hello.world.v1.Hello);
	// [clientStream] - 
	rpc clientStream (stream sylklabs.hello.world.v1.Hello) returns (sylklabs.hello.world.v1.Hello);
	// [bidiStream] - 
	rpc bidiStream (stream sylklabs.hello.world.v1.Hello) returns (stream sylklabs.hello.world.v1.Hello);
}


// [sylklabs.hello.world.v1.Hello] - 
message Hello {
	// [sylklabs.hello.world.v1.Hello.text] - 
	string text = 1;
}